# acra

./: .gitignore  CHANGELOG.md  CHANGELOG_DEV.md  CONTRIBUTING.md  Gopkg.toml  LICENSE  Makefile  README.md  acrawriter.podspec  binary_decryptor.go  buffered_reader.go  build.gradle  byte_reader_binary.go  byte_reader_pg_escape.go  byte_reader_pg_hex.go  callbacks.go  circle.yml  client_commands_session.go  client_session.go  config.go  decryptor.go  encryptor-config.yaml  encryptor_config.yaml  flags.md  go.mod  go.sum  keystore.go  keystore_test.go  listener.go  logs  matcher.go  matcher_pool.go  matcher_test.go  pg_decryptor.go  pg_escape_decryptor.go  pg_escape_decryptor_test.go  pg_general_decryptor.go  pg_hex_decryptor.go  reader.go  reader_test.go  (+5 more)
.circleci/: build_binaries.sh  check_configs.sh  check_gofmt.sh  check_golint.sh  check_gotest.sh  check_ineffassign.sh  check_misspell.sh  check_mysql_connection.sh  check_postgresql_connection.sh  check_redis_connection.sh  check_vault_connection.sh  config.yml  generate_random_data.py  integration.sh  prepare.sh
.github/: pull_request_template.md
acra-censor/: acra-censor_configuration_provider.go  acra-censor_implementation.go  acra-censor_interfaces.go  acra-censor_test.go
acra-writer/: acra-writer.go  acra-writer_test.go
acrablock/: acrablock.go  acrablock_test.go  dataEncryptor.go  dataEncryptor_test.go  processors.go  processors_test.go  utils.go
acracensor/: acracensor_configuration_provider.go  acracensor_implementation.go  (+2 more)
examples/cpp/: CMakeLists.txt  Readme.md  main.cpp  main_tests.cpp
examples/cpp/libs/cppcodec/: base32_hex.hpp
examples/cpp/libs/cppcodec/detail/: stream_codec.hpp
(+1402 files in other folders)
